--- a/views/mindex.jade
+++ b/views/mindex.jade
@@ -123,7 +123,7 @@ head
         padding: 1em;
       }
       .cbp-spmenu-left {
-        left: -240px;
+        left: -315px;
       }
       .cbp-spmenu-left.cbp-spmenu-open {
         left: 0px;
@@ -207,9 +207,8 @@ head
                   a( id='login' href="#") Войти
                 li(class='next')
                   a(href="/register") Регистрация
-      .row
-        .col-xs-12(style='text-align:right;position:absolute;bottom:15px;')
-          span(class='glyphicon glyphicon-align-justify ' id='showLeft' style='color:white;font-size:30px;margin-top:20px;')
+    
+    span(class='glyphicon glyphicon-align-justify ' id='showLeft' style='color:white;font-size:30px;posotion:fixed;bottom:15px;right:15px;')
 
     
       //
