--- a/views/mindex.jade
+++ b/views/mindex.jade
@@ -207,8 +207,8 @@ head
                   a( id='login' href="#") Войти
                 li(class='next')
                   a(href="/register") Регистрация
-    
-    span(class='glyphicon glyphicon-align-justify ' id='showLeft' style='color:white;font-size:30px;posotion:fixed;bottom:15px;right:15px;')
+    #wraper(style='height:100%;width:100%;position:relative;')
+      span(class='glyphicon glyphicon-align-justify ' id='showLeft' style='color:white;font-size:30px;posotion:absolute;bottom:15px;right:15px;')
 
     
       //
