--- a/views/mindex.jade
+++ b/views/mindex.jade
@@ -20,6 +20,9 @@ head
       font-family:roboto-thin;
       src:url('/bootstrap/fonts/Roboto-Thin.ttf');
       }
+      body {
+        font-family:roboto-thin;
+      }
       h1 {
         font-family:roboto-thin;
         color:white;
@@ -207,8 +210,7 @@ head
                   a( id='login' href="#") Войти
                 li(class='next')
                   a(href="/register") Регистрация
-    #wraper(style='height:100%;width:100%;position:relative;')
-      span(class='glyphicon glyphicon-align-justify ' id='showLeft' style='color:white;font-size:30px;posotion:absolute;bottom:15px;right:15px;')
+    span(class='glyphicon glyphicon-align-justify ' id='showLeft' style='color:white;font-size:30px;position:absolute;bottom:15px;right:15px;')
 
     
       //
