--- a/views/mindex.jade
+++ b/views/mindex.jade
@@ -210,7 +210,8 @@ head
                   a( id='login' href="#") Войти
                 li(class='next')
                   a(href="/register") Регистрация
-    span(class='glyphicon glyphicon-align-justify ' id='showLeft' style='color:white;font-size:30px;position:absolute;bottom:15px;right:15px;')
+    button(type='button' id='showLeft' style='color:white;font-size:30px;position:absolute;bottom:15px;right:15px;border:0px;background-color:transparent;') 
+      span(class='glyphicon glyphicon-align-justify ')
 
     
       //
