--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -163,28 +163,6 @@ head
         float: none !important; 
       }
   body
-    //nav(class='navbar navbar-fixed-top navbar-inverse')
-    //  .container
-    //    .navbar-header
-    //      button(type='button',class='navbar-toggle collapsed',data-toggle='collapse',data-target='#navbar',aria-expanded='false',aria-controls='navbar')
-    //        span.sr-only 
-    //          Toggle navigation
-    //        span.icon-bar
-    //        span.icon-bar
-    //        span.icon-bar
-    //      h2(class='navbar-brand',style='font-size8:8vw;margin-top:0px;margin-bottom:0px;') 
-    //        a(class='navar-brand') People&Books
-    //    #navbar.navbar-collapse.collapse(aria-expanded='false',style='height:1px;')
-    //      ul(class='nav navbar-nav')
-    //        li
-    //          a(href='/top') 
-    //            h1 Рейтинги
-    //        li
-    //          a(href='/search')  
-    //            h1 Опроекте
-    //        li 
-    //          a(href='/misc/1') 
-    //            h1 Контакты
     nav(class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1")
       h3(style='text-align:center;color:orange;') People & Books
       form(class="navbar-form navbar-right" method='post' action='/srch' id='srch' role="search")
@@ -196,8 +174,31 @@ head
       a(href="http://m.peopleandbooks.com/settings") Настройки
       a(href='http://m.peopleandbooks.com/about') О проекте
       a(href="/logout") Выйти
-    .container(style='background-color:teal;')
-      
+    .container(style='background-color:teal;overflow:auto:height:100%;')
+      .row
+        .col-xs-12
+          h1 Hello, mate ! 
+      .row
+        .col-xs-12
+          h1 Hello, mate ! 
+      .row
+        .col-xs-12
+          h1 Hello, mate ! 
+      .row
+        .col-xs-12
+          h1 Hello, mate ! 
+      .row
+        .col-xs-12
+          h1 Hello, mate ! 
+      .row
+        .col-xs-12
+          h1 Hello, mate ! 
+      .row
+        .col-xs-12
+          h1 Hello, mate ! 
+      .row
+        .col-xs-12
+          h1 Hello, mate !     
     footer(class='footer')
       .container
         .row
