--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -162,6 +162,12 @@ head
       .navbar-right {
         float: none !important; 
       }
+      footer {
+          position: fixed;
+          height: 100px;
+          bottom: 0;
+          width: 100%;
+      }
   body
     nav(class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1")
       h3(style='text-align:center;color:orange;') People & Books
