--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -164,7 +164,6 @@ head
       }
       footer {
           position: fixed;
-          height: 100px;
           bottom: 0;
           width: 100%;
       }
@@ -208,10 +207,10 @@ head
     footer(class='footer')
       .container
         .row
-          .col-xs-10.col-xs-offset-1
-            .btn-group(role="group" aria-label="...")
-              button(type="button active" class="btn btn-default") Books
-              button(type="button" class="btn btn-default") Movies
+          .col-xs-10.col-xs-offset-1(style='text-align:center;')
+            .btn-group(role="group" aria-label="..." style='margin:5px;')
+              button(type="button active" class="btn btn-default" style='border-radius-bottom-left:30px;border-radius-top-left:30px;') Books
+              button(type="button" class="btn btn-default" style='border-radius-bottom-right:30px;border-radius-top-right:30px;') Movies
           .col-xs-1
             button(type='button' id='showLeft' style='color:white;font-size:30px;position:absolute;bottom:15px;right:15px;border:0px;background-color:transparent;') 
              span(class='glyphicon glyphicon-align-justify ')
