--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -203,7 +203,16 @@ head
           h1 Hello, mate ! 
       .row
         .col-xs-12
-          h1 Hello, mate !     
+          h1 Hello, mate ! 
+      .row
+        .col-xs-12
+          h1 Hello, mate ! 
+      .row
+        .col-xs-12
+          h1 Hello, mate ! 
+      .row
+        .col-xs-12
+          h1 Hello, mate !         
     footer(class='footer')
       .container
         .row
