--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -218,8 +218,8 @@ head
         .row
           .col-xs-10.col-xs-offset-1(style='text-align:center;')
             .btn-group(role="group" aria-label="..." style='margin:5px;')
-              button(type="button active" class="btn btn-default" style='border-radius-bottom-left:30px;border-radius-top-left:30px;') Books
-              button(type="button" class="btn btn-default" style='border-radius-bottom-right:30px;border-radius-top-right:30px;') Movies
+              button(type="button active" class="btn btn-default" style='border-bottom-left-radius:30px !important;border-top-left-radius:30px !important;') Books
+              button(type="button" class="btn btn-default" style='border-bottom-right-radius:30px !important;border-top-right-radius:30px !important;') Movies
           .col-xs-1
             button(type='button' id='showLeft' style='color:white;font-size:30px;position:absolute;bottom:15px;right:15px;border:0px;background-color:transparent;') 
              span(class='glyphicon glyphicon-align-justify ')
