--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -166,6 +166,7 @@ head
           position: fixed;
           bottom: 0;
           width: 100%;
+          background-color:tan;
       }
   body
     nav(class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1")
@@ -218,8 +219,8 @@ head
         .row
           .col-xs-10.col-xs-offset-1(style='text-align:center;')
             .btn-group(role="group" aria-label="..." style='margin:5px;')
-              button(type="button active" class="btn btn-xs btn-default" style='border-bottom-left-radius:30px !important;border-top-left-radius:30px !important;') Books
-              button(type="button" class="btn btn-xs btn-default" style='border-bottom-right-radius:30px !important;border-top-right-radius:30px !important;') Movies
+              button(type="button active" class="btn btn-default" style='border-bottom-left-radius:30px !important;border-top-left-radius:30px !important;') Books
+              button(type="button" class="btn btn-default" style='border-bottom-right-radius:30px !important;border-top-right-radius:30px !important;') Movies
           .col-xs-1
             button(type='button' id='showLeft' style='color:white;font-size:30px;position:absolute;bottom:15px;right:15px;border:0px;background-color:transparent;') 
              span(class='glyphicon glyphicon-align-justify ')
