--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -20,6 +20,10 @@ head
       font-family:roboto-thin;
       src:url('/bootstrap/fonts/Roboto-Thin.ttf');
       }
+      @font-face {
+      font-family:high;
+      src: url('/bootstrap/fonts/Attentica.ttf');
+      }
       body {
         font-family:roboto-thin;
       }
