--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -216,7 +216,7 @@ head
       a(href="http://m.peopleandbooks.com/settings") Настройки
       a(href='http://m.peopleandbooks.com/about') О проекте
       a(href="/logout") Выйти
-    .container(style='background-color:teal;overflow:auto:height:100%;')
+    .container(style='background-color:teal;overflow:auto;height:100%;padding-left:0px;padding-right:0px;')
       .col-xs-12(id='books' style='background-color:rgba(108, 166, 149, 1);height:100%;overflow:auto;')
         .row
           .col-xs-12(style='text-align:center;')
