--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -289,10 +289,10 @@ head
       .container
         .row
           .col-xs-12(style='text-align:center;')
-            .btn-group(role="group" aria-label="..." style='margin:5px;')
+            .btn-group(role="group" aria-label="..." style='margin-top:5px;margin-bottom:5px;')
               button(type="button active" class="btn btn-default") Books
               button(type="button" class="btn btn-default" ) Movies
-    button(type='button' id='showLeft' style='color:white;font-size:30px;position:absolute;bottom:15px;right:15px;border:0px;background-color:transparent;') 
+    button(type='button' id='showLeft' style='color:white;font-size:30px;position:absolute;bottom:10px;right:5px;border:0px;background-color:transparent;') 
       span(class='glyphicon glyphicon-align-justify ')
 
     
