--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -188,7 +188,7 @@ head
       .alreadym{
       color:rgba(255, 255, 255, 0.21);
       }
-      .leftPaddingExtended{
+      {
         padding-left:30px;
       }
       textarea:hover, 
@@ -245,44 +245,44 @@ head
                   a(style='background-color:#EFAF4F;') Add
                 li(class="next")
                   a( class='addbookbutton' style='background-color:#999;') Close
-        .row.leftPaddingExtended
+        .row
           .col-xs-3
             h4(class='datecl') 12.05.2015
           .col-xs-9
             h4(class='alreadyb') Ф.М. Достоевский "Идиот"
-        .row.leftPaddingExtended
+        .row
           .col-xs-9.col-xs-offset-3
             h4(class='alreadyb') Д. Перетолчин "Мировые войны и мировые элиты"
               span(class='glyphicon glyphicon-star' style='color:#F2D45C;margin-left:10px;')
-        .row.leftPaddingExtended
+        .row
           .col-xs-9.col-xs-offset-3
             h4(class='alreadyb') Ф.М. Достоевский "Идиот"
-        .row.leftPaddingExtended
+        .row
           .col-xs-9.col-xs-offset-3
             h4(class='yet') Ф.М. Достоевский "Идиот"
               span(class='glyphicon glyphicon-exclamation-sign' style='color:rgba(255, 255, 255, 0.65);margin-left:10px;')
-        .row.leftPaddingExtended
+        .row
           .col-xs-3
             h4(class='datecl') 12.05.2015
           .col-xs-9
             h4(class='alreadyb') Ф.М. Достоевский "Идиот"
               span(class='glyphicon glyphicon-star' style='color:#F2D45C;margin-left:10px;')
-        .row.leftPaddingExtended
+        .row
           .col-xs-3
             h4(class='datecl') 12.05.2015
           .col-xs-9
             h4(class='alreadyb') Ф.М. Достоевский "Идиот"
-        .row.leftPaddingExtended
+        .row
           .col-xs-9.col-xs-offset-3
             h4(class='yet') Ф.М. Достоевский "Идиот"
-        .row.leftPaddingExtended
+        .row
           .col-xs-9.col-xs-offset-3
             h4(class='yet') Ф.М. Достоевский "Идиот"
               span(class='glyphicon glyphicon-exclamation-sign' style='color:rgba(255, 255, 255, 0.65);margin-left:10px;')
-        .row.leftPaddingExtended
+        .row
           .col-xs-9.col-xs-offset-3
             h4(class='yet') Ф.М. Достоевский "Идиот"
-        .row.leftPaddingExtended
+        .row
           .col-xs-9.col-xs-offset-3
             h4(class='yet') Ф.М. Достоевский "Идиот"        
     footer(class='footer')
