--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -170,7 +170,7 @@ head
           position: fixed;
           bottom: 0;
           width: 100%;
-          background-color:mediumaquamarine;
+          background-color:#333;
       }
       input[type="text"], textarea {
       outline: none;
@@ -203,6 +203,9 @@ head
       {
           outline:0px !important;
           -webkit-appearance:none;
+      }
+      #addbook{
+        background-color:#333;
       }
   body
     nav(class="cbp-spmenu cbp-spmenu-vertical cbp-spmenu-left" id="cbp-spmenu-s1")
