--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -299,7 +299,7 @@ head
           .col-xs-3
             span(class='glyphicon glyphicon-align-book ' style='color:white;font-size:30px;')
           .col-xs-3
-            span(class='glyphicon glyphicon-align-justify ' style='color:white;font-size:30px;')
+            span(class='glyphicon glyphicon-align-justify ' id='showLeft' style='color:white;font-size:30px;')
     //      .col-xs-12(style='text-align:center;')
     //        .btn-group(role="group" aria-label="..." style='margin-top:10px;margin-bottom:10px;')
     //          button(type="button active" class="btn btn-default") Books
