--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -293,13 +293,13 @@ head
       .container
         .row(style='text-align:center;')
           .col-xs-3
-            span(class='glyphicon glyphicon-align-plus ' style='color:white;font-size:20px;')
+            span(class='glyphicon glyphicon-plus ' style='color:white;font-size:30px;')
           .col-xs-3
-            span(class='glyphicon glyphicon-align-film ' style='color:white;font-size:20px;')
+            span(class='glyphicon glyphicon-film ' style='color:white;font-size:30px;')
           .col-xs-3
-            span(class='glyphicon glyphicon-align-book ' style='color:white;font-size:20px;')
+            span(class='glyphicon glyphicon-book ' style='color:white;font-size:30px;')
           .col-xs-3
-            span(class='glyphicon glyphicon-align-justify ' id='showLeft' style='color:white;font-size:20px;')
+            span(class='glyphicon glyphicon-align-justify ' id='showLeft' style='color:white;font-size:30px;')
     //      .col-xs-12(style='text-align:center;')
     //        .btn-group(role="group" aria-label="..." style='margin-top:10px;margin-bottom:10px;')
     //          button(type="button active" class="btn btn-default") Books
