--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -291,13 +291,13 @@ head
             h5(class='yet') Ф.М. Достоевский "Идиот"        
     footer(class='footer')
       .container
-        .row(style='text-align:center;')
+        .row(style='text-align:center;padding-top:10px;padding-bottom:10px;')
           .col-xs-3
-            span(class='glyphicon glyphicon-plus ' style='color:white;font-size:30px;')
+            h1( style='color:white;font-size:40px;') +
           .col-xs-3
-            span(class='glyphicon glyphicon-film ' style='color:white;font-size:30px;')
+            h1(style='color:white;font-size:40px;') B
           .col-xs-3
-            span(class='glyphicon glyphicon-book ' style='color:white;font-size:30px;')
+            h1(style='color:white;font-size:40px;') M
           .col-xs-3
             span(class='glyphicon glyphicon-align-justify ' id='showLeft' style='color:white;font-size:30px;')
     //      .col-xs-12(style='text-align:center;')
