--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -293,11 +293,11 @@ head
       .container
         .row(style='text-align:center;padding-top:10px;padding-bottom:10px;')
           .col-xs-3
-            h1( style='color:white;font-size:40px;') +
+            h1( style='color:white;font-size:40px;margin-top:0px;margin-bottom:0px;') +
+          .col-xs-3(style='background-color:#c1c1c1;')
+            h1(style='color:white;font-size:40px;margin-top:0px;margin-bottom:0px;') B
           .col-xs-3
-            h1(style='color:white;font-size:40px;') B
-          .col-xs-3
-            h1(style='color:white;font-size:40px;') M
+            h1(style='color:white;font-size:40px;margin-top:0px;margin-bottom:0px;') M
           .col-xs-3
             span(class='glyphicon glyphicon-align-justify ' id='showLeft' style='color:white;font-size:30px;')
     //      .col-xs-12(style='text-align:center;')
