--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -291,13 +291,13 @@ head
             h5(class='yet') Ф.М. Достоевский "Идиот"        
     footer(class='footer')
       .container
-        .row(style='text-align:center;padding-top:10px;padding-bottom:10px;')
+        .row(style='text-align:center;padding-top:20px;padding-bottom:20px;')
           .col-xs-3
-            h1( style='color:white;font-size:40px;margin-top:0px;margin-bottom:0px;') +
+            h1( style='color:white;font-size:40px;') +
           .col-xs-3(style='background-color:#c1c1c1;')
-            h1(style='color:white;font-size:40px;margin-top:0px;margin-bottom:0px;') B
+            h1(style='color:white;font-size:40px;') B
           .col-xs-3
-            h1(style='color:white;font-size:40px;margin-top:0px;margin-bottom:0px;') M
+            h1(style='color:white;font-size:40px;') M
           .col-xs-3
             span(class='glyphicon glyphicon-align-justify ' id='showLeft' style='color:white;font-size:30px;')
     //      .col-xs-12(style='text-align:center;')
