--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -293,11 +293,11 @@ head
       .container
         .row(style='text-align:center;')
           .col-xs-3
-            h1( style='color:white;font-size:40px;padding-top:20px;padding-bottom:20px;') +
+            h1( style='color:white;font-size:40px;padding-top:20px;padding-bottom:20px;margin-top:0px;margin-bottom:0px;') +
           .col-xs-3(style='background-color:#c1c1c1;')
-            h1(style='color:white;font-size:40px;padding-top:20px;padding-bottom:20px;') B
+            h1(style='color:white;font-size:40px;padding-top:20px;padding-bottom:20px;margin-top:0px;margin-bottom:0px;') B
           .col-xs-3
-            h1(style='color:white;font-size:40px;padding-top:20px;padding-bottom:20px;') M
+            h1(style='color:white;font-size:40px;padding-top:20px;padding-bottom:20px;margin-top:0px;margin-bottom:0px;') M
           .col-xs-3
             span(class='glyphicon glyphicon-align-justify ' id='showLeft' style='color:white;font-size:30px;')
     //      .col-xs-12(style='text-align:center;')
