--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -299,7 +299,7 @@ head
           .col-xs-3
             h1(style='color:white;font-size:40px;padding-top:20px;padding-bottom:20px;margin-top:0px;margin-bottom:0px;') M
           .col-xs-3
-            span(class='glyphicon glyphicon-align-justify ' id='showLeft' style='color:white;font-size:30px;')
+            span(class='glyphicon glyphicon-align-justify ' id='showLeft' style='color:white;font-size:30px;padding-top:20px;')
     //      .col-xs-12(style='text-align:center;')
     //        .btn-group(role="group" aria-label="..." style='margin-top:10px;margin-bottom:10px;')
     //          button(type="button active" class="btn btn-default") Books
