--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -293,7 +293,7 @@ head
                 li(class="next")
                   a( class='addbookbutton' style='background-color:#999;') Close
         .row(style='text-align:center;')
-          .col-xs-3(id='addbookbutton')
+          .col-xs-3.addbookbutton
             h1( style='color:white;font-size:40px;padding-top:10px;padding-bottom:10px;margin-top:0px;margin-bottom:0px;') +
           .col-xs-3.activebutton( id='showbooks')
             h1(style='color:white;font-size:40px;padding-top:10px;padding-bottom:10px;margin-top:0px;margin-bottom:0px;') B
