--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -205,8 +205,7 @@ head
           -webkit-appearance:none;
       }
       #addbook{
-        background-color: rgba(0, 0, 0, 0.33);
-       box-shadow: inset 0px 0px 10px 3px rgb(56, 86, 77);
+        background-color: #A9A9A9;
       }
       .activebutton {
         background-color:#252525;
@@ -273,10 +272,10 @@ head
         .row.adding(id='addbook' style='display:none;padding-top:20px;')
           .col-xs-12
             .form-group
-              label(for="exampleInputEmail1") Название
+              label(for="exampleInputEmail1" style='color:white;') Название
               input(type="email" class="form-control" id="exampleInputEmail1" placeholder="Crime and punishment")
             .form-group
-              label(for="exampleInputEmail1") Автор
+              label(for="exampleInputEmail1" style='color:white;') Автор
               input(type="email" class="form-control" id="exampleInputEmail1" placeholder="Dostoevsky F.M.")
             .checkbox
               label
