--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -266,7 +266,22 @@ head
           h5(class='yet') Ф.М. Достоевский "Идиот"
       .row
         .col-xs-9.col-xs-offset-3
-          h5(class='yet') Ф.М. Достоевский "Идиот"        
+          h5(class='yet') Ф.М. Достоевский "Идиот" 
+      .row
+        .col-xs-9.col-xs-offset-3
+          h5(class='yet') Ф.М. Достоевский "Идиот"
+            span(class='glyphicon glyphicon-exclamation-sign' style='color:rgba(255, 255, 255, 0.65);margin-left:10px;')
+      .row
+        .col-xs-3
+          h5(class='datecl') 12.05.2015
+        .col-xs-9
+          h5(class='alreadyb') Ф.М. Достоевский "Идиот"
+            span(class='glyphicon glyphicon-star' style='color:#F2D45C;margin-left:10px;')
+      .row
+        .col-xs-3
+          h5(class='datecl') 12.05.2015
+        .col-xs-9
+          h5(class='alreadyb') Ф.М. Достоевский "Идиот"       
     footer(class='footer')
       .container
         .row.adding(id='addbook' style='display:none;padding-top:20px;')
