--- a/views/mindexreg.jade
+++ b/views/mindexreg.jade
@@ -222,56 +222,56 @@ head
       a(href="http://m.peopleandbooks.com/settings") Настройки
       a(href='http://m.peopleandbooks.com/about') О проекте
       a(href="/logout") Выйти
-    .container(style='background-color:teal;overflow:auto;height:100%;padding-left:10px;padding-right:0px;')
+    .container(style='background-color:#52CA8F;overflow:auto;height:100%;padding-left:10px;padding-right:0px;')
       .row
         .col-xs-12(style='text-align:center;')
           h1(style='font-family:high;font-size:100px;font-weight:bold;color:white;') 30 
             span(style='color:rgba(0, 0, 0, 0.15);') | 20
       .row
         .col-xs-12
-          h5(class='alreadyb') Ф.М. Достоевский "Идиот"
+          h4(class='alreadyb') Ф.М. Достоевский "Идиот"
       .row
         .col-xs-12
-          h5(class='alreadyb') Д. Перетолчин "Мировые войны и мировые элиты"
+          h4(class='alreadyb') Д. Перетолчин "Мировые войны и мировые элиты"
             span(class='glyphicon glyphicon-star' style='color:#F2D45C;margin-left:10px;')
       .row
         .col-xs-12
-          h5(class='alreadyb') Ф.М. Достоевский "Идиот"
+          h4(class='alreadyb') Ф.М. Достоевский "Идиот"
       .row
         .col-xs-12
-          h5(class='yet') Ф.М. Достоевский "Идиот"
+          h4(class='yet') Ф.М. Достоевский "Идиот"
             span(class='glyphicon glyphicon-exclamation-sign' style='color:rgba(255, 255, 255, 0.65);margin-left:10px;')
       .row
         .col-xs-12
-          h5(class='alreadyb') Ф.М. Достоевский "Идиот"
+          h4(class='alreadyb') Ф.М. Достоевский "Идиот"
             span(class='glyphicon glyphicon-star' style='color:#F2D45C;margin-left:10px;')
       .row
         .col-xs-12
-          h5(class='alreadyb') Ф.М. Достоевский "Идиот"
+          h4(class='alreadyb') Ф.М. Достоевский "Идиот"
       .row
         .col-xs-12
-          h5(class='yet') Ф.М. Достоевский "Идиот"
+          h4(class='yet') Ф.М. Достоевский "Идиот"
       .row
         .col-xs-12
-          h5(class='yet') Ф.М. Достоевский "Идиот"
+          h4(class='yet') Ф.М. Достоевский "Идиот"
             span(class='glyphicon glyphicon-exclamation-sign' style='color:rgba(255, 255, 255, 0.65);margin-left:10px;')
       .row
         .col-xs-12
-          h5(class='yet') Ф.М. Достоевский "Идиот"
+          h4(class='yet') Ф.М. Достоевский "Идиот"
       .row
         .col-xs-12
-          h5(class='yet') Ф.М. Достоевский "Идиот" 
+          h4(class='yet') Ф.М. Достоевский "Идиот" 
       .row
         .col-xs-12
-          h5(class='yet') Ф.М. Достоевский "Идиот"
+          h4(class='yet') Ф.М. Достоевский "Идиот"
             span(class='glyphicon glyphicon-exclamation-sign' style='color:rgba(255, 255, 255, 0.65);margin-left:10px;')
       .row
         .col-xs-12
-          h5(class='alreadyb') Ф.М. Достоевский "Идиот"
+          h4(class='alreadyb') Ф.М. Достоевский "Идиот"
             span(class='glyphicon glyphicon-star' style='color:#F2D45C;margin-left:10px;')
       .row
         .col-xs-12
-          h5(class='alreadyb') Ф.М. Достоевский "Идиот"       
+          h4(class='alreadyb') Ф.М. Достоевский "Идиот"       
     footer(class='footer')
       .container
         .row.adding(id='addbook' style='display:none;padding-top:20px;')
@@ -320,6 +320,7 @@ head
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
     script(src='/js/bootstrap.min.js')
     script.
+      // CA5B52 for movies
       $('.addbookbutton').click(function(){
           $('#addbook').slideToggle();
           });
